log-output-ping-pong-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: log-output-ping-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
